<resources>
    <string name="app_name">mooc</string>
    <string name="sign_in_des">Lightweight and Straighforward</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="account_created">Account Created</string>
    <string name="activate_the_account">Please check your email to activate the account</string>
    <string name="mlm">MLM</string>
    <string name="qa"><![CDATA[Q&A]]></string>
    <string name="create_empty" />
    <string name="contacts">Contacts</string>
    <string name="me">Me</string>
    <string name="featured">Featured</string>
    <string name="shared">Shared</string>
    <string name="favorites">Favorites</string>
    <string name="listed">Listed</string>
    <string name="involed">Involed</string>
    <string name="watch">Watch</string>
    <string name="friends">Friends</string>
    <string name="fans">Fans</string>
    <string name="follows">Follows</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="copy_right">© %1$s mmooc.com</string>
    <string name="forgot_pwd">Forgot password</string>
    <string name="code">Code</string>
    <string name="get_code">Get Code</string>
    <string name="verify_code_error">The verify code is error</string>
    <string name="submit">Submit</string>
    <string name="password_not_match">New password don\'t match the confirm password</string>
    <string name="reset_pwd_success">Reset password successful</string>
    <string name="score">Score</string>
    <string name="school_verify_state">(%1$s)</string>
    <string name="my_q_a"><![CDATA[My Q&A]]></string>
    <string name="my_notes">My Notes</string>
    <string name="my_videos">My Videos</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_shared">My Shared</string>
    <string name="micro_lecture_create">Microlecture Create</string>
    <string name="click_to_view">Click to view</string>
    <string name="share_to_course">Share to course</string>
    <string name="create_new">Create new</string>
    <string name="share_to">Share to</string>
    <string name="wecaht">WeCaht</string>
    <string name="weibo">Weibo</string>
    <string name="qq">QQ</string>
    <string name="moments">Moments</string>
    <string name="please_wait">Please wait...</string>
    <string name="verifyed">Verifyed</string>
    <string name="un_verify">Un verify</string>
    <string name="works_length">Length / %1$s</string>
    <string name="works_info_comments">Comments %1$s</string>
    <string name="information_architecture">Information architecture</string>
    <string name="send">Send</string>
    <string name="like_failed">点赞失败</string>
    <string name="like_success">点赞成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="like_cancel_success">取消点赞</string>
    <string name="collect_cancel_success">取消收藏成功</string>
    <string name="back">Back</string>
    <string name="user_shared">I %1$s Shared</string>
    <string name="follow">+Follow</string>
    <string name="chat">Chat</string>
    <string name="not_share_anything">Not share anything...</string>
    <string name="user_profile">User Profile</string>
    <string name="he">He</string>
    <string name="she">She</string>
    <string name="un_follow_success">Un follow success</string>
    <string name="follow_success">Follow success</string>
    <string name="please_input_content">Please input chat content</string>
    <string name="gender_dialog_title">Gender</string>
    <string name="course_videos">Videos %1$s</string>
    <string name="course_questions">Questions %1$s</string>
    <string name="course_enrollments">Enrollments %1$s</string>
    <string name="course_center">Course Center</string>
    <string name="choose">Choose</string>
    <string name="choose_a_country">Choose a country</string>
    <string name="country_list">Country list</string>
    <string name="sorry_get_empty_data">Sorry! get empty data</string>
    <string name="replys">Reply %1$s</string>
    <string name="profile_photo">Profile photo</string>
    <string name="name">Name</string>
    <string name="what_up">Wha\'t up</string>
    <string name="city">City</string>
    <string name="institute">Institute</string>
    <string name="log_out">Log out</string>
    <string name="my_profile">My Profile</string>
    <string name="course_title">Course title</string>
    <string name="subject">Subject</string>
    <string name="choose_subject">Choose subject</string>
    <string name="course_description">Course description</string>
    <string name="upload_course_image_tips">Upload picture \n (Course cover : 400 x 300)</string>
    <string name="upload">Upload</string>
    <string name="open_new_course">Open New Course</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="upload_verify_picture_tips">Upload picture \n (Photo ID,Staff Card,Support Letter,etc)</string>
    <string name="get_verified">Get Verified</string>

    <array name="gender">
        <item>Secret</item>
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="course_info_type">
        <item>Overview</item>
        <item>MLM</item>
        <item>Q&#038;A</item>
    </array>
</resources>
