<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ok" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/micro_lecture_create"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_click_to_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_oval_gray_stroke_bg"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/click_to_view"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_share_to_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_oval_gray_stroke_bg"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/share_to_course"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_create_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape_oval_gray_stroke_bg"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/create_new"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:orientation="vertical" />

        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_to" />

        <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/share_icon_width"
                android:layout_height="@dimen/share_icon_height"
                android:src="@drawable/wechat"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wecaht"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_moments"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/share_icon_width"
                android:layout_height="@dimen/share_icon_height"
                android:src="@drawable/moments"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moments"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_qq"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/share_icon_width"
                android:layout_height="@dimen/share_icon_height"
                android:src="@drawable/qq"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qq"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_weibo"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/share_icon_width"
                android:layout_height="@dimen/share_icon_height"
                android:src="@drawable/weibo"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weibo"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/share_icon_width"
                android:layout_height="@dimen/share_icon_height"
                android:src="@drawable/email"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>