<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_gray_stroke_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/email"
            android:padding="10dp" />

        <include
            android:id="@+id/ic_line"
            layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="3"
                android:id="@+id/et_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/code"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_weight="1"
                android:background="@drawable/sel_get_code"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/get_code" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_width="match_parent"
        android:background="@drawable/shape_gray_stroke_bg"
        android:layout_height="wrap_content"
        android:id="@+id/tv_next"
        android:text="@string/next"/>
</LinearLayout>